# TravelGram

./: pyproject.toml
src/apps/event/: models.py
src/apps/event/libs/: constants.py
src/apps/file/libs/: constants.py
src/apps/file/models/: category.py  file.py
src/apps/user_auth/: models.py
src/config/: settings.py
src/templates/: base.html
src/utils/: file_categories.py
